# ncnn_android_facerec

./: README.md  build.gradle  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: mobilefacenet_v2.param
app/src/main/java/com/davidchiu/ncnncam/: CameraActivity.java  DetectorActivity.java  ImageUtils.java  LegacyCameraConnectionFragment.java  Ncnn.java
app/src/main/jni/: CMakeLists.txt  CMakeLists2.txt
app/src/main/jni/ncnn/: MobileFaceNet.cpp  MobileFaceNet.h  detect.id.h  embed.id.h  mobilefacenet_v2.id.h  ncnn_jni.cpp
app/src/main/res/layout/: activity_camera.xml
gradle/wrapper/: gradle-wrapper.properties
